2009-10-08  Paolo Carlini  <paolo.carlini@oracle.com>

	* config/abi/pre/gnu.ver: Adjust exports.

2009-10-07  Phil Muldoon <pmuldoon@redhat.com>

	* doc/xml/manual/debug.xml: Rewrite and expand GDB Python
	pretty-printer section.

2009-10-07  Chris Jefferson  <chris@bubblescope.net>

	* testsuite/25_algorithms/rotate/moveable2.cc: New.

2009-10-06  Janis Johnson  <janis187@us.ibm.com>

	* testsuite/decimal/binary-arith.cc: Fix directive to skip test.
	* testsuite/decimal/cast_neg.cc: Ditto.
	* testsuite/decimal/comparison.cc: Ditto.
	* testsuite/decimal/compound-assignment.cc: Ditto.
	* testsuite/decimal/compound-assignment-memfunc.cc: Ditto.
	* testsuite/decimal/conversion-from-float.cc: Ditto.
	* testsuite/decimal/conversion-from-integral.cc: Ditto.
	* testsuite/decimal/conversion-to-generic-float.cc: Ditto.
	* testsuite/decimal/conversion-to-integral.cc: Ditto.
	* testsuite/decimal/ctor.cc: Ditto.
	* testsuite/decimal/incdec.cc: Ditto.
	* testsuite/decimal/incdec-memfunc.cc: Ditto.
	* testsuite/decimal/make-decimal.cc: Ditto.
	* testsuite/decimal/mixed-mode_neg.cc: Ditto.
	* testsuite/decimal/operator_neg.cc: Ditto.
	* testsuite/decimal/unary-arith.cc: Ditto.

2009-10-05  Benjamin Kosnik  <bkoz@redhat.com>

	* doc/html/*: Regenerate.

2009-10-05  John Bytheway  <jbytheway@gmail.com>

	PR libstdc++/41530
	* include/std/tuple (_Tuple_impl<>::_Tuple_impl(_Tuple_impl<>&&)):
	Fix to just move.
	* testsuite/20_util/tuple/cons/41530.cc: New.

2009-10-05  Phil Muldoon  <pmuldoon@redhat.com>

	* doc/xml/manual/debug.xml: Add narrative for GDB Python pretty
	printers. Add links to GDB wiki/online manual.

2009-10-05  Benjamin Kosnik  <bkoz@redhat.com>
	    Edward Smith-Rowland  <3dw4rd@verizon.net>

	* include/decimal/decimal: Warn if decimal floating point types
	are not available.
	* acinclude.m4 (GLIBCXX_ENABLE_DECIMAL_FLOAT): New.
	* configure.ac: Use it.
	* configure: Regenerate.
	* config.h.in: Regenerate.

2009-10-05  Benjamin Kosnik  <bkoz@redhat.com>
